deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zad2-app
  name: zad2-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: zad2-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: zad2-app
    spec:
      volumes:
      - name: index-vol
        configMap:
          name: zad2-cm
      containers:
      - name: zad2-web
        image: 28ludmila/zad2:1.0.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: index-vol
          mountPath: /home/student
        ports:
          - name: zad2
            containerPort: 3000
            protocol: TCP
        resources: 
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
status: {}
