ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zad2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: zad2.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zad2-service
                port:
                  number: 80
